--- a/.katas_venv/pyvenv.cfg
+++ b/.katas_venv/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /Library/Frameworks/Python.framework/Versions/3.12/bin
 include-system-site-packages = false
 version = 3.12.2
 executable = /Library/Frameworks/Python.framework/Versions/3.12/bin/python3.12
-command = /Library/Frameworks/Python.framework/Versions/3.12/bin/python3 -m venv /Users/pablo/Documents/Repos/python/katas-in-python-copy/katas_venv
+command = /Library/Frameworks/Python.framework/Versions/3.12/bin/python3 -m venv /Users/pablojoyce/Documents/Repos/python/katas-in-python/.katas_venv
